PaymentNotificationOfCustomerActivity , activity_payment_notification_of_customer changes

--- a/app/src/main/res/layout/activity_payment_notification_of_customer.xml
+++ b/app/src/main/res/layout/activity_payment_notification_of_customer.xml
@@ -238,6 +238,7 @@
                                 android:layout_marginStart="@dimen/_10sdp"
                                 android:layout_marginEnd="@dimen/_10sdp"
                                 android:src="@drawable/edit_icon"
+                                android:visibility="invisible"
                                 app:layout_constraintBottom_toBottomOf="@id/txtScheduledTime"
                                 app:layout_constraintStart_toEndOf="@id/txtScheduledTime"
                                 app:layout_constraintTop_toTopOf="@id/txtScheduledTime"
@@ -276,6 +277,7 @@
                                 android:layout_height="@dimen/_20sdp"
                                 android:layout_marginStart="@dimen/_5sdp"
                                 android:src="@drawable/call_round_icon"
+                                android:visibility="invisible"
                                 app:layout_constraintBottom_toBottomOf="@id/txtMobileNumber"
                                 app:layout_constraintStart_toEndOf="@id/txtMobileNumber"
                                 app:layout_constraintTop_toTopOf="@id/txtMobileNumber" />
@@ -705,7 +707,7 @@
                 style="@style/CustomButtonStyle"
                 android:layout_width="@dimen/_136sdp"
                 android:layout_height="@dimen/_45sdp"
-                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_marginTop="@dimen/_10sdp"
                 android:layout_marginEnd="@dimen/_10sdp"
                 android:backgroundTint="@color/red"
                 android:text="@string/not_ready_to_pay"
