--- a/app/src/main/res/layout/custom_dialog_editable.xml
+++ b/app/src/main/res/layout/custom_dialog_editable.xml
@@ -1,60 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:backgroundTint="@color/white"
     android:layout_marginStart="@dimen/_20sdp"
     android:layout_marginEnd="@dimen/_20sdp"
-    android:background="@drawable/rounded_dialog_corner">
-
+    android:background="@drawable/rounded_dialog_corner"
+    android:backgroundTint="@color/white">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:paddingBottom="@dimen/_10sdp"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/_10sdp">
 
-       <EditText
-           android:id="@+id/edtPleaseSpecifyName"
-           app:layout_constraintStart_toStartOf="parent"
-           app:layout_constraintEnd_toEndOf="parent"
-           android:hint="@string/please_specify_name"
-           android:layout_width="wrap_content"
-           android:inputType="text"
-           android:maxLength="20"
-           android:maxLines="1"
-           android:textAlignment="center"
-           app:layout_constraintTop_toTopOf="parent"
-           android:layout_marginTop="@dimen/_30sdp"
-           android:layout_height="wrap_content"/>
+        <EditText
+            android:id="@+id/edtPleaseSpecifyName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_30sdp"
+            android:hint="@string/please_specify_name"
+            android:inputType="text|textMultiLine"
+            android:maxLines="5"
+            android:textAlignment="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/edtPleaseSpecifyContact"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:hint="@string/please_specify_contact"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:digits="0123456789"
+            android:hint="@string/please_specify_contact"
             android:inputType="number"
             android:maxLength="10"
             android:maxLines="1"
             android:textAlignment="center"
-            android:digits="0123456789"
-           app:layout_constraintTop_toBottomOf="@id/edtPleaseSpecifyName"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_height="wrap_content"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/edtPleaseSpecifyName" />
 
         <Button
             android:id="@+id/btnProceed"
-            android:backgroundTint="@color/green"
-            app:layout_constraintTop_toBottomOf="@id/edtPleaseSpecifyContact"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            style="@style/CustomButtonStyle"
+            android:layout_width="@dimen/_136sdp"
+            android:layout_height="@dimen/_45sdp"
             android:layout_marginTop="@dimen/_10sdp"
+            android:backgroundTint="@color/green"
             android:text="@string/proceed"
             android:textStyle="normal"
-            android:layout_width="@dimen/_136sdp"
-            android:layout_height="@dimen/_45sdp"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/edtPleaseSpecifyContact" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -62,11 +61,11 @@
         android:id="@+id/ivCancel"
         android:layout_width="@dimen/_20sdp"
         android:layout_height="@dimen/_20sdp"
-        android:src="@drawable/cancel_close"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:clickable="true"
+        android:src="@drawable/cancel_close"
         app:tint="@color/red" />
 
 </RelativeLayout>
