--- a/app/src/main/res/layout/activity_payment_notification_of_customer.xml
+++ b/app/src/main/res/layout/activity_payment_notification_of_customer.xml
@@ -13,10 +13,11 @@
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        style="@style/MainConstraintStyle"
         android:id="@+id/MainConstraint"
+        style="@style/MainConstraintStyle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/skyBlue"
         tools:context=".npa_flow.PaymentNotificationOfCustomerActivity">
 
         <androidx.appcompat.widget.Toolbar
@@ -252,8 +253,6 @@
                 app:layout_constraintStart_toStartOf="@id/btnNotReadyToPay"
                 app:layout_constraintTop_toBottomOf="@id/btnNotReadyToPay"
                 app:layout_constraintTop_toTopOf="@id/btnAskedToCallBackLater" />
-
-
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
