--- a/app/src/main/res/layout/item_details_of_customer.xml
+++ b/app/src/main/res/layout/item_details_of_customer.xml
@@ -1,50 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    style="@style/MainConstraintStyle"
-    android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/labelDetailName"
-        style="@style/common_text_style"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_10sdp"
-       android:layout_marginStart="@dimen/_10sdp"
-        tools:text="@string/name"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/txtDetailName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/_10sdp"
-        android:textColor="@color/black"
-        android:textSize="@dimen/_12ssp"
-        android:textStyle="italic"
-        android:ellipsize="end"
-        android:maxLength="15"
-        app:layout_constraintBottom_toBottomOf="@id/labelDetailName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/labelDetailName"
-        tools:text=": Sairaj Naidu" />
-
-    <View
-        android:id="@+id/viewLine"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txtDetailName"
-        android:layout_marginTop="@dimen/_3sdp"
-        android:background="@color/textBlue"
-        android:visibility="invisible"
-        android:layout_marginStart="@dimen/_2sdp"
-        android:layout_marginEnd="@dimen/_2sdp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        style="@style/MainConstraintStyle"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_1sdp"/>
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/labelDetailName"
+            style="@style/common_text_style"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Outstanding Balance" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/txtDetailName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/_20sdp"
+            android:ellipsize="end"
+           android:maxLength="15"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_12ssp"
+            android:textStyle="italic"
+            app:layout_constraintBottom_toBottomOf="@id/labelDetailName"
+            app:layout_constraintEnd_toStartOf="@id/btnDetail"
+            app:layout_constraintTop_toTopOf="@id/labelDetailName"
+            tools:text=": Sairaj Naidu" />
+
+        <EditText
+            android:id="@+id/edtDetail"
+            android:layout_width="@dimen/_100sdp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_75sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:digits="0123456789,."
+            android:hint="@string/enter_amount"
+            android:inputType="number"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="@id/labelDetailName"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/labelDetailName" />
+
+
+        <!--Capture / Calculate Button-->
+        <TextView
+            android:id="@+id/btnDetail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/_3sdp"
+            android:background="@drawable/round_corner_bg"
+            android:backgroundTint="@color/textBlue"
+            android:gravity="center"
+            android:padding="@dimen/_5sdp"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@id/labelDetailName"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/labelDetailName"
+            tools:text="@string/capture" />
+
+
+        <View
+            android:id="@+id/viewLine"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_1sdp"
+            android:layout_marginStart="@dimen/_2sdp"
+            android:layout_marginTop="@dimen/_3sdp"
+            android:layout_marginEnd="@dimen/_2sdp"
+            android:background="@color/textBlue"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/txtDetailName" />
+
+
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
