--- a/app/src/main/res/layout/item_details_of_customer.xml
+++ b/app/src/main/res/layout/item_details_of_customer.xml
@@ -43,6 +43,7 @@
             android:layout_marginEnd="@dimen/_10sdp"
             android:digits="0123456789,."
             android:hint="@string/enter_amount"
+            android:maxLength="10"
             android:inputType="number"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="@id/labelDetailName"
