--- a/app/src/main/res/layout/fragment_loan_collection.xml
+++ b/app/src/main/res/layout/fragment_loan_collection.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+
+        <variable
+            name="viewModel"
+            type="com.example.test.npa_flow.loan_collection.LoanCollectionViewModel" />
+
+    </data>
+
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         style="@style/MainConstraintStyle"
@@ -15,203 +23,33 @@
             android:layout_height="match_parent">
 
 
-            <TextView
-                android:id="@+id/txtName"
-                style="@style/common_text_style"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:text="Sairaj Naidu"
-                android:textStyle="normal"
+            <!--Progress Bar-->
+            <ProgressBar
+                android:id="@+id/loadingProgressBar"
+                style="@style/CustomProgressDialog"
+                android:layout_width="@dimen/_30sdp"
+                android:layout_height="@dimen/_30sdp"
+                android:indeterminate="true"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-
-            <TextView
-                android:id="@+id/txtMobileNumber"
-                style="@style/common_text_style"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_2sdp"
-                android:text="987654321"
-                android:textStyle="normal"
-                app:layout_constraintStart_toStartOf="@id/txtName"
-                app:layout_constraintTop_toBottomOf="@id/txtName" />
-
-            <ImageView
-                android:id="@+id/ivCall"
-                android:layout_width="@dimen/_18sdp"
-                android:layout_height="@dimen/_16sdp"
-                android:layout_marginStart="@dimen/_5sdp"
-                android:src="@drawable/wifi_call"
-                app:layout_constraintStart_toEndOf="@id/txtMobileNumber"
-                app:layout_constraintTop_toTopOf="@id/txtMobileNumber" />
-
-
-            <TextView
-                android:id="@+id/txtLocation"
-                style="@style/common_text_style"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginEnd="@dimen/_50sdp"
-                android:text="Siddapur"
-                android:textStyle="normal"
-                app:layout_constraintEnd_toStartOf="@+id/txtDistance"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                style="@style/common_text_style"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_2sdp"
-                android:text="1:30 pm"
-                android:textStyle="normal"
-                app:layout_constraintStart_toStartOf="@id/txtLocation"
-                app:layout_constraintTop_toBottomOf="@id/txtLocation" />
-
-            <TextView
-                android:id="@+id/txtDistance"
-                style="@style/common_text_style"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:text="3km"
-                android:textStyle="normal"
-                app:layout_constraintStart_toStartOf="@id/txtDPD"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
-                android:id="@+id/ivMap1"
-                android:layout_width="@dimen/_18sdp"
-                android:layout_height="@dimen/_16sdp"
-                android:src="@drawable/location"
-                app:layout_constraintEnd_toEndOf="@id/txtDPD"
-                app:layout_constraintTop_toTopOf="@id/txtDistance"
-                app:tint="@color/red" />
-
-
-            <TextView
-                android:id="@+id/txtDPD"
-                style="@style/common_text_style"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_2sdp"
-                android:layout_marginEnd="@dimen/_10sdp"
-                android:text="DPD 1-30"
-                android:textStyle="normal"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/txtDistance" />
-
-            <View
-                android:id="@+id/view1"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvLoanCollection"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_1sdp"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_2sdp"
-                android:layout_marginEnd="@dimen/_10sdp"
-                android:background="@color/textBlue"
-                app:layout_constraintTop_toBottomOf="@id/txtMobileNumber" />
-
-
-            <TextView
-                android:id="@+id/txtName2"
-                style="@style/common_text_style"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:text="Naidu Sairaj"
-                android:textStyle="normal"
+                android:layout_marginStart="@dimen/_5sdp"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_marginEnd="@dimen/_5sdp"
+                android:orientation="vertical"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/view1" />
-
-
-            <TextView
-                android:id="@+id/txtMobileNumber2"
-                style="@style/common_text_style"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_2sdp"
-                android:text="123456789"
-                android:textStyle="normal"
-                app:layout_constraintStart_toStartOf="@id/txtName2"
-                app:layout_constraintTop_toBottomOf="@id/txtName2" />
-
-            <ImageView
-                android:id="@+id/ivCall2"
-                android:layout_width="@dimen/_18sdp"
-                android:layout_height="@dimen/_16sdp"
-                android:layout_marginStart="@dimen/_5sdp"
-                android:src="@drawable/wifi_call"
-                app:layout_constraintStart_toEndOf="@id/txtMobileNumber2"
-                app:layout_constraintTop_toTopOf="@id/txtMobileNumber2" />
-
-            <TextView
-                android:id="@+id/txtLocation2"
-                style="@style/common_text_style"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginEnd="@dimen/_50sdp"
-                android:text="Tumkur"
-                android:textStyle="normal"
-                app:layout_constraintEnd_toStartOf="@+id/txtDistance"
-                app:layout_constraintTop_toBottomOf="@id/view1" />
-
-            <TextView
-                style="@style/common_text_style"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_2sdp"
-                android:text="2:30 pm"
-                android:textStyle="normal"
-                app:layout_constraintStart_toStartOf="@id/txtLocation2"
-                app:layout_constraintTop_toBottomOf="@id/txtLocation2" />
-
-            <TextView
-                android:id="@+id/txtDistance2"
-                style="@style/common_text_style"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:text="8km"
-                android:textStyle="normal"
-                app:layout_constraintStart_toStartOf="@id/txtDPD2"
-                app:layout_constraintTop_toBottomOf="@id/view1" />
-
-            <ImageView
-                android:id="@+id/ivMap2"
-                android:src="@drawable/location"
-                app:layout_constraintTop_toTopOf="@id/txtDistance2"
-                app:layout_constraintEnd_toEndOf="@id/txtDPD2"
-                android:layout_width="@dimen/_18sdp"
-                android:layout_height="@dimen/_16sdp"
-                app:tint="@color/red" />
-
-
-            <TextView
-                android:id="@+id/txtDPD2"
-                style="@style/common_text_style"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_2sdp"
-                android:layout_marginEnd="@dimen/_10sdp"
-                android:text="DPD 1-30"
-                android:textStyle="normal"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/txtDistance2" />
-
-            <View
-                android:id="@+id/view2"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_1sdp"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_2sdp"
-                android:layout_marginEnd="@dimen/_10sdp"
-                android:background="@color/textBlue"
-                app:layout_constraintTop_toBottomOf="@id/txtMobileNumber2" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:itemCount="3"
+                tools:listitem="@layout/item_loan_collection" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
