activity_balance_interest_calculation imageviews background changed to textBlue

--- a/app/src/main/res/layout/activity_balance_interest_calculation.xml
+++ b/app/src/main/res/layout/activity_balance_interest_calculation.xml
@@ -113,7 +113,7 @@
                     android:layout_marginTop="@dimen/_3sdp"
                     android:layout_marginEnd="@dimen/_25sdp"
                     android:background="@drawable/round_corner_bg"
-                    android:backgroundTint="@color/skyBlue"
+                    android:backgroundTint="@color/textBlue"
                     android:padding="@dimen/_3sdp"
                     android:src="@drawable/rupee_icon"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -203,7 +203,7 @@
                     android:layout_height="@dimen/_25sdp"
                     android:layout_marginTop="@dimen/_3sdp"
                     android:background="@drawable/round_corner_bg"
-                    android:backgroundTint="@color/skyBlue"
+                    android:backgroundTint="@color/textBlue"
                     android:padding="@dimen/_3sdp"
                     android:src="@drawable/percentage_icon"
                     app:layout_constraintEnd_toEndOf="@id/edtInterestRate"
@@ -274,7 +274,7 @@
                     android:layout_marginTop="@dimen/_3sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
                     android:background="@drawable/round_corner_bg"
-                    android:backgroundTint="@color/skyBlue"
+                    android:backgroundTint="@color/textBlue"
                     android:padding="@dimen/_3sdp"
                     android:text="@string/d"
                     android:textAlignment="center"
